Added calories_app.py and calories burnt prediction.ipynb

--- a/calories burnt prediction.ipynb
+++ b/calories burnt prediction.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": null,
    "id": "b1a521e3-29cd-4b9a-93da-285d4a9243cc",
    "metadata": {},
    "outputs": [],
@@ -31,9 +31,11 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "import seaborn as sns\n",
-    "\n",
+    "random.seed(42)\n",
+    "np.random.seed(42) \n",
+    "xgb.set_config(verbosity=1) # Adjust verbosity level if needed\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import random\n",
     "from sklearn.preprocessing import StandardScaler,OrdinalEncoder\n",
     "\n",
     "from sklearn.metrics import r2_score\n",
