Added calories_app.py and calories burnt prediction.ipynb

--- a/calories burnt prediction.ipynb
+++ b/calories burnt prediction.ipynb
@@ -54,8 +54,8 @@
     "\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "from xgboost import XGBRegressor\n",
-    "\n",
+    "from xgboost import XGBRegressor \n",
+    "import xgboost as xgb\n",
     "import streamlit as st"
    ]
   },
